2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Cleaning up organization of election materials.

	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* index.html:
	* template.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Cleaning up organization of membership materials.  Moved 
 	membership.html to membership-list.html so we can use membership.html
	for general membership info.

	* charter.html:
	* directory.html:
	* elections.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:
	* membership.html:
	* template.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Added a directory and template file.

	* charter.html:
	* directory.html:
	* elections.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:
	* template.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Updating news items.

	* index.html:

2001-10-23  Dan Mueth  <d-mueth@uchicago.edu>

	Moving old overview document out of the way and putting
	in an updated draft for the 2001 elections.

	* overview.html:
	* overview_2000.html:

2001-10-18  Glynn Foster <glynn.foster@sun.com>

	* membership-form.html: s/Name/Full Name in 
	attempt to get people to put their full names down
	when applying for membership

2001-07-16  Dan Mueth  <d-mueth@uchicago.edu>

	Every module deserves HACKING and README files :)

	* HACKING:
	* README:

2001-07-16  Dan Mueth  <d-mueth@uchicago.edu>

	Added a little blurb and cleaned up links a bit.

	* elections.html:

2001-07-16  Dan Mueth  <d-mueth@uchicago.edu>

	Copied the FAQ into these pages so we can have a nicer and
	more uniform appearance.  In the future, make sure to run
	tidy first, since this is pretty ugly.

	* charter.html:
	* elections.html:
	* faq-ln7.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:

2001-07-13  Dan Mueth  <d-mueth@uchicago.edu>

	Updating the various pages so they have a common style and