@@ -20,11 +20,16 @@
      <td>
       <center>
        <a href="index.html">Home</a> :&nbsp;
-       <a href="faq.html">FAQ</a> :&nbsp;
-       Charter :&nbsp;
+       Documentation :&nbsp;
        <a href="membership.html">Membership</a> :&nbsp;
        <a href="elections.html">Elections</a> :&nbsp;
        <a href="directory.html">Directory</a>
+      </center>
+      <br>
+      <center>
+       <a href="documentation.html">Index</a> :&nbsp;
+       Charter :&nbsp;
+       <a href="faq.html">FAQ</a>
       </center>
      </td>
     </tr>
