@@ -20,11 +20,16 @@
      <td>
       <center>
        <a href="index.html">Home</a> :&nbsp;
-       FAQ :&nbsp;
-       <a href="charter.html">Charter</a> :&nbsp;
+       Documentation :&nbsp;
        <a href="membership.html">Membership</a> :&nbsp;
        <a href="elections.html">Elections</a> :&nbsp;
        <a href="directory.html">Directory</a>
+      </center>
+      <br>
+      <center>
+       <a href="documentation.html">Index</a> :&nbsp;
+       <a href="charter.html">Charter</a> :&nbsp;
+       FAQ
       </center>
      </td>
     </tr>
