@@ -20,8 +20,7 @@
      <td>
       <center>
        Home :&nbsp;
-       <a href="faq.html">FAQ</a> :&nbsp;
-       <a href="charter.html">Charter</a> :&nbsp;
+       <a href="documentation.html">Documentation</a> :&nbsp;
        <a href="membership.html">Membership</a> :&nbsp;
        <a href="elections.html">Elections</a> :&nbsp;
        <a href="directory.html">Directory</a> 
@@ -123,32 +122,6 @@
  Microsystems</em>, <em>TurboLinux</em>, <em>VA Linux</em> and <em>Ximian</em>.
 </p>
 
-<p>
- <a NAME="Other Foundation-Related Materials"></a><b>Other 
- Foundation-Related Materials:</b>
-
-<ul>
-
-<li>
-<div style="margin-bottom: 0in; "><a href="http://www.gnome.org/pr-foundation.html">Press
-release announcing the creation of the foundation</a></div>
-</li>
-
-<li>
-<div style="margin-bottom: 0in; ">Mailing lists:&nbsp;</div>
-
-<ul>
-<div style="margin-bottom: 0in; "><b><a href="mailto:foundation-announce@gnome.org">foundation-announce@gnome.org</a></b>(<a href="http://mail.gnome.org/archives/foundation-announce">archive</a>|
-<a href="http://mail.gnome.org/mailman/listinfo/foundation-announce">subscription
-page</a>) is for foundation-related announcements.&nbsp;</div>
-<b><a href="mailto:foundation-list@gnome.org">foundation-list@gnome.org</a></b>(<a href="http://mail.gnome.org/archives/foundation-list">archive</a>|
-<a href="http://mail.gnome.org/mailman/listinfo/foundation-list">subscription
-page</a>) is for all foundation-related discussions, including discussions
-about candidacy statements. Minutes from board meetings are also posted
-here.&nbsp;
-<br>&nbsp;</ul>
-</li>
-</ul>
 </td>
 </tr>
 
